k8s-manifests/deployment.yaml
# k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: solid-deosil
    labels:
        app: solid-deosil
spec:
    replicas: 2
    selector:
        matchLabels:
            app: solid-deosil
    template:
        metadata:
            labels:
                app: solid-deosil
        spec:
            containers:
                - name: solid-deosil
                  image: registry.minikube/solid-deosil:latest # Will be updated by workflow
                  ports:
                      - containerPort: 80
