k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: vite-app
spec:
    selector:
        app: vite-app
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
